@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-1-0-2
+DATE: 09/25/2012
+STAFF: lec
+CHANGES:
+TR1184/PRB_StrainByDate.py
+
 TAG: qcreports_db-5-1-0-1
 DATE: 09/17/2012
 STAFF: lec
